--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gulp-rename": "^1.4.0",
-    "uglify-js": ">=2.6.0"
+    "uglify-js": ">=2.6.0",
+    "cached-path-relative": ">=1.0.2"
   }
 }
