--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "sass-box",
+  "name": "frontend-setup",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mattander/easy-frontend-setup.git"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "autoprefixer": "^9.1.5",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "autoprefixer": "^9.4.4",
+    "axios": "^0.18.0",
     "babelify": "^10.0.0",
-    "browser-sync": "^2.24.7",
+    "browser-sync": "^2.26.3",
     "browserify": "^16.2.3",
-    "cssnano": "^4.1.4",
+    "cssnano": "^4.1.8",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect-php": "^1.0.3",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": ">=3.0.1",
     "gulplog": "^1.0.0",
-    "replace": "^1.0.0",
+    "replace": "^1.0.1",
+    "uglify-js": "^2.6.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "gulp-rename": "^1.4.0",
-    "uglify-js": ">=2.6.0",
-    "cached-path-relative": ">=1.0.2"
   }
 }
